PlzNavigate: Make BlockLegacySubresources work.

Chrome blocks 'ftp:' subresource request inside 'http'/'https' pages.
See https://crbug.com/435547.

It was broken with PlzNavigate (--enable-browser-side-navigation) when
the subresource is an iframe. The page was blocked, but only after the
request had been sent to the server.
This CL makes chrome block requests before they are submitted.

Test:NavigationHandleImplBrowserTest.BlockLegacySubresources
Bug: 757809
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_chromium_browser_side_navigation_rel;master.tryserver.chromium.linux:linux_site_isolation
Change-Id: Ia85417af453b2e0532b0b7c0f381fa8a2f8e6e8a